# lattice-forge

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  runtime-candidates.yml
docs/: INTEGRATION.md  WORLD_CLASS_TARGETS.md  runtime-asset-prophet-artifact.md
docs/standards/: COMPLIES_WITH_MULTIDOMAIN_GEOSPATIAL_STANDARDS.md
examples/: runtime-asset.example.json  runtime-asset.gaia-osm-ingest.json  runtime-asset.notebook-to-artifact.json  runtime-asset.sourceos-image-build.json
registry/runtime-candidates/: gaia-adsb-ingest-runtime.candidate.v1.json  gaia-ais-ingest-runtime.candidate.v1.json  gaia-sensitive-geo-policy-eval-runtime.candidate.v1.json  gaia-sensorthings-ingest-runtime.candidate.v1.json  gaia-stac-ingest-runtime.candidate.v1.json  gaia-telemetry-ingest-runtime.candidate.v1.json
runtimes/prophet-beam-dataops/: conda-lock.yml  flake.nix  kernel.json
runtimes/prophet-python-ml/: conda-lock.yml  flake.nix  kernel.json  runtime-asset.json
runtimes/prophet-ray-ml/: conda-lock.yml  flake.nix  kernel.json
schemas/: runtime-asset.schema.json
src/lattice_forge/: __init__.py  emit_runtime_profile.py  evidence_summary.py  validate_runtime_asset.py  validate_runtime_evidence.py
src/lattice_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_emit_runtime_profile.py  test_evidence_summary.py  test_runtime_asset_validator.py
tools/: emit_runtime_asset.py  emit_runtime_promotion_manifest.py  validate_runtime_candidates.py  validate_runtime_promotion_manifest.py  validate_runtime_sidecars.py
(+12 files in other folders)
