[project]
name = "lattice-forge"
version = "0.1.0"
description = "Governed Nix/conda-compatible runtimes, package channels, kernels, images, SBOMs, and signed runtime releases."
requires-python = ">=3.11"

[project.scripts]
lattice-forge-evidence-summary = "lattice_forge.evidence_summary:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
